[tool.poetry]
name = "repl_python3_beta_Replit-Language-API"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.0.0"
bs4 = "^0.0.1"
pytz = "^2021.1"
logzero = "^1.7.0"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
