[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jacob Hands <jacob@gogit.io>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pytz = "^2021.1"
logzero = "^1.7.0"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
redis = "^4.0.2"
gunicorn = "^20.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
